rename manifest verification to image verification
